testcases/bindgen/189/error_message.txt
error[E0080]: evaluation of constant value failed
    --> generated_bindings.rs:1290:19
     |
1290 |     ["Size of D"][::std::mem::size_of::<D>() - 128usize];
     |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ attempt to compute `64_usize - 128_usize`, which would overflow

error: aborting due to 1 previous error; 75 warnings emitted
